--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@ PSXPrev/*
 RALibRetro/*
 RATools/*
 DuckStation3D/
+
+ghidra_11.3_PUBLIC/
+
+pcsx/
+
+PCSX-redux/
+
+Duckstation 3D.lnk
+
+pcsx-redux.exe.lnk
+
+RALibretro.lnk
